--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-jupyter
-streamlit
-pickle
-plotly
+streamlit==1.31.0
+pandas==2.2.0
+numpy==1.26.4
+scikit-learn==1.4.0
+plotly==5.18.0
